# imwallet

./: .env  .gitignore  AGENTS.md  Cargo.toml  LOCAL_DEV.md  dev.txt  docker-compose.yml  document.md  package-lock.json  package.json  password.txt  什么是助记词.txt  助记词.txt  助记词导入.txt  设备钱包.txt  钱包首页.txt
apps/server/: .env.example  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  config.toml  deploy-pm2.sh  deploy.sh  docker-compose.test.yml  docker-compose.yml  ecosystem.config.js  imwallet.service  package.json  setup-ec2.sh  tsconfig.json  vitest.config.ts
apps/server/deploy/: install.sh  rs-wallet.service  upgrade.sh
apps/server/migrations/: V1_init.sql  V2_add_transaction_platform.sql  V2_chains_account_enable.sql  V3_add_notification_metadata.sql  V3_transactions_indexes.sql  V4_add_indexes.sql  V5_transaction_perf_indexes.sql
apps/server/prisma/: drop-all.sql  init.sql  schema.prisma  seed.js  seed.sql  seed.ts
apps/server/scripts/: check-db.js  drop-all.js  drop-remaining.js  verify-db.js
apps/server/src/: errors.rs  index.ts  main.rs  utils.rs
apps/server/src/__tests__/: unit.test.ts
apps/server/src/chain/: address_validator.rs  mod.rs
apps/server/src/config/: chains.ts  index.ts  mod.rs  prisma.ts
apps/server/src/db/: mod.rs  query.rs
apps/server/src/middleware/: auth.ts  deviceAuth.ts  device_auth.rs  errorHandler.ts  mod.rs  requestLogger.ts  request_logger.rs  role.ts  validate.ts
apps/server/src/models/: app_config.rs  app_log.rs  asset.rs  asset_address.rs  chain_entity.rs  device.rs  fiat_currency.rs  mod.rs  notification.rs  notification_read.rs  recharge.rs  transaction.rs  wallet.rs  wallet_address.rs  wallet_subscription.rs
apps/server/src/routes/: account.rs  account.ts  admin.rs  admin.ts  asset.rs  asset.ts  auth.ts  config.rs  config.ts  contact.ts  device.rs  device.ts  fiat.rs  fiat.ts  health.rs  log.rs  log.ts  mod.rs  notification.rs  notification.ts  recharge.rs  recharge.ts  rsa.rs  rsa.ts  token.ts  transaction.rs  transaction.ts  wallet.rs  wallet.ts
apps/server/src/services/: accountService.ts  account_service.rs  adminService.ts  assetService.ts  asset_service.rs  authService.ts  chainSyncService.ts  config_service.rs  contactService.ts  derivationService.ts  deviceService.ts  device_service.rs  fiatService.ts  fiat_service.rs  log_service.rs  migrator.rs  migrator.ts  mod.rs  notificationService.ts  rsaService.ts  (+11 more)
apps/test-device-auth/: Cargo.toml
apps/test-device-auth/src/: main.rs
(+222 files in other folders)
