[package]
name = "rs-wallet"
version = "0.1.0"
edition = "2021"
description = "Multi-chain decentralized private chain wallet backend — Rust migration of IMWallet server"
authors = ["IMWallet Team"]
license = "MIT"

[dependencies]
# ── Web Framework ──
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "request-id"] }

# ── Database ORM ──
rbdc = { version = "4", features = ["tls-rustls"] }
rbdc-pg = "4"
rbatis = { version = "4", features = ["default"] }
rbdc-pool-fast = "4"
rbs = "4"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
flyway = "0.7"
async-trait = "0.1"

# ── Cryptography ──
ed25519-dalek = "2"
sha2 = "0.11"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.11"

# ── Utilities ──
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
dotenvy = "0.15"
log = "0.4"
simple_logger = "5"
thiserror = "2"
anyhow = "1"
lru = "0.18"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"

# ── Blockchain ──
# tronic = { version = "0.5", features = ["tonic-tls"] }  # Uncomment when Tron interaction is needed

[dev-dependencies]
axum-test = "20"
pretty_assertions = "1"