[package]
name = "test-device-auth"
version = "0.1.0"
edition = "2021"
description = "IMWallet device auth integration test client"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.11"
hex = "0.4"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
